# PixelMatchSwitcher

./: .editorconfig  CMakeLists.txt  README.md  pm.qrc
data/: draw_match_image.effect  pixel_match.effect
images/: README.md
src/: cas-filter.c  cas-plugin.c  pixel-match-core.cpp  pixel-match-core.hpp  pixel-match-debug-tab.cpp  pixel-match-debug-tab.hpp  pixel-match-dialog.cpp  pixel-match-dialog.hpp  pixel-match-filter-ref.cpp  pixel-match-filter-ref.hpp  pixel-match-filter.c  pixel-match-filter.h  pixel-match-matching-tab.cpp  pixel-match-matching-tab.hpp  pixel-match-results-packet.hpp  pixel-match-scenes-tab.cpp  pixel-match-scenes-tab.hpp  pixel-match-structs.hpp  pixel-match-switcher.c  pm-about-box.cpp  pm-about-box.hpp  pm-add-action-menu.cpp  pm-add-action-menu.hpp  pm-core.cpp  pm-core.hpp  pm-debug-tab.cpp  pm-debug-tab.hpp  pm-dialog.cpp  pm-dialog.hpp  pm-filter-ref.cpp  pm-filter-ref.hpp  pm-filter.c  pm-filter.h  pm-help-widget.cpp  pm-help-widget.hpp  pm-image-view.cpp  pm-image-view.hpp  pm-linger-queue.cpp  pm-linger-queue.hpp  pm-list-selector-dialog.cpp  (+49 more)
